Displays prompt and input field for city to search.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,23 @@
 
 <body class="bgimg-1">
 
-
     <h1>Weather Dashboard</h1>
     <div class="jumbotron">
+
+        <div class="row">
+
+            <!-- Search & history list of cities -->
+            <div class="col-3" id="searchPrompt">
+                <!-- prompt to input city -->
+                <label for="inputCity"><strong>Search city: </strong></label>
+                <input type="text" class="form-contro searchInput" name="inputCity" id="inputCity">
+            </div>
+
+            <!--  Selected city current forecast, then 5 day forecast -->
+            <div class="col-9">
+
+            </div>
+        </div>
 
 
 
