--- a/index.html
+++ b/index.html
@@ -11,16 +11,25 @@
 
 <body class="bgimg-1">
 
+
+    <!-- page header -->
     <h1>Weather Dashboard</h1>
+
+
     <div class="jumbotron">
 
+        <!-- everything but the header in one row -->
         <div class="row">
 
-            <!-- Search & history list of cities -->
+            <!-- First column has search & history list of cities -->
             <div class="col-3" id="searchPrompt">
                 <!-- prompt to input city -->
                 <label for="inputCity"><strong>Search city: </strong></label>
                 <input type="text" class="form-contro searchInput" name="inputCity" id="inputCity">
+
+                <ul class="list-group">
+                    <!-- previously searched cities will be added by js here -->
+                </ul>
             </div>
 
             <!--  Selected city current forecast, then 5 day forecast -->
@@ -39,9 +48,15 @@
 
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    
+ <!-- <script src="jquery-3.4.1.min.js"></script>
+ -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./Develop/weather.js"></script>
 </body>
