Have data needed for 5 day forecast in array of objects, ready to display on the page.

--- a/index.html
+++ b/index.html
@@ -84,31 +84,41 @@
 
                         <div class="col-2 card bg-info">
                             <div class="card-body">
-                                This is some text within a card body.
+                                <!--         <img src="./Assets/clouds.jpg"> <!-- placeholder -->
+                                <p>Max temp: </p>
+                                <p>Max humidity: </p>
                             </div>
                         </div>
 
                         <div class="col-2 card bg-info">
                             <div class="card-body">
-                                This is some text within a card body.
+                                <!--       <img src="./Assets/clouds.jpg"> <!-- placeholder -->
+                                <p>Max temp: </p>
+                                <p>Max humidity: </p>
                             </div>
                         </div>
 
                         <div class="col-2 card bg-info">
                             <div class="card-body">
-                                This is some text within a card body.
+                                <!--       <img src="./Assets/clouds.jpg"> <!-- placeholder -->
+                                <p>Max temp:</p>
+                                <p>Max humidity: </p>
                             </div>
                         </div>
 
                         <div class="col-2 card bg-info">
                             <div class="card-body">
-                                This is some text within a card body.
+                   <!--       <img src="./Assets/clouds.jpg"> <!-- placeholder -->
+                                <p>Max temp:</p>
+                                <p>Max humidity: </p>
                             </div>
                         </div>
 
                         <div class="col-2 card bg-info">
                             <div class="card-body">
-                                This is some text within a card body.
+                    <!--            <img src="./Assets/clouds.jpg"> <!-- placeholder -->
+                                <p>Max temp:</p>
+                                <p>Max humidity: </p>
                             </div>
                         </div>
 
