Displays 5 day forecast info.

--- a/index.html
+++ b/index.html
@@ -84,41 +84,46 @@
 
                         <div class="col-2 card bg-info">
                             <div class="card-body">
-                                <!--         <img src="./Assets/clouds.jpg"> <!-- placeholder -->
-                                <p>Max temp: </p>
-                                <p>Max humidity: </p>
+                                <p id="fore5date0"></p>
+                                <img alt="weather icon" class="fore5img" id="iconDay0">
+                                <p id="fore5temp0">Max temp: </p>
+                                <p id="fore5humid0">Max humidity: </p>
                             </div>
                         </div>
 
                         <div class="col-2 card bg-info">
                             <div class="card-body">
-                                <!--       <img src="./Assets/clouds.jpg"> <!-- placeholder -->
-                                <p>Max temp: </p>
-                                <p>Max humidity: </p>
+                                <p id="fore5date1"></p>
+                                <img alt="weather icon" class="fore5img" id="iconDay1">
+                                <p id="fore5temp1">Max temp: </p>
+                                <p id="fore5humid1">Max humidity: </p>
                             </div>
                         </div>
 
                         <div class="col-2 card bg-info">
                             <div class="card-body">
-                                <!--       <img src="./Assets/clouds.jpg"> <!-- placeholder -->
-                                <p>Max temp:</p>
-                                <p>Max humidity: </p>
+                                <p id="fore5date2"></p>
+                                <img alt="weather icon" class="fore5img" id="iconDay2">
+                                <p id="fore5temp2">Max temp:</p>
+                                <p id="fore5humid2">Max humidity: </p>
                             </div>
                         </div>
 
                         <div class="col-2 card bg-info">
                             <div class="card-body">
-                   <!--       <img src="./Assets/clouds.jpg"> <!-- placeholder -->
-                                <p>Max temp:</p>
-                                <p>Max humidity: </p>
+                                <p id="fore5date3"></p>
+                                <img alt="weather icon" class="fore5img" id="iconDay3">
+                                <p id="fore5temp3">Max temp:</p>
+                                <p id="fore5humid3">Max humidity: </p>
                             </div>
                         </div>
 
                         <div class="col-2 card bg-info">
                             <div class="card-body">
-                    <!--            <img src="./Assets/clouds.jpg"> <!-- placeholder -->
-                                <p>Max temp:</p>
-                                <p>Max humidity: </p>
+                                <p id="fore5date4"></p>
+                                <img alt="weather icon" class="fore5img" id="iconDay4">
+                                <p id="fore5temp4">Max temp:</p>
+                                <p id="fore5humid4">Max humidity: </p>
                             </div>
                         </div>
 
