Fixed responsiveness.  Used bootstrap m-auto to keep information in 5 day forecast cards IN the cards instead of spilling over.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Document</title>
 </head>
 
-<body class="bgimg-1">
+<body>
 
 
     <!-- page header -->
@@ -80,9 +80,9 @@
                     </div>
 
                     <!-- row with 5 day forecast in it -->
-                    <div class="row">
+                    <div class="row" id="fore5row">
 
-                        <div class="col-2 card bg-info">
+                        <div class="col-2 card bg-info m-auto ml-0">
                             <div class="card-body">
                                 <p id="fore5date0"></p>
                                 <img alt="weather icon" class="fore5img" id="iconDay0">
@@ -91,7 +91,7 @@
                             </div>
                         </div>
 
-                        <div class="col-2 card bg-info">
+                        <div class="col-2 card bg-info m-auto">
                             <div class="card-body">
                                 <p id="fore5date1"></p>
                                 <img alt="weather icon" class="fore5img" id="iconDay1">
@@ -100,7 +100,7 @@
                             </div>
                         </div>
 
-                        <div class="col-2 card bg-info">
+                        <div class="col-2 card bg-info m-auto">
                             <div class="card-body">
                                 <p id="fore5date2"></p>
                                 <img alt="weather icon" class="fore5img" id="iconDay2">
@@ -109,7 +109,7 @@
                             </div>
                         </div>
 
-                        <div class="col-2 card bg-info">
+                        <div class="col-2 card bg-info m-auto">
                             <div class="card-body">
                                 <p id="fore5date3"></p>
                                 <img alt="weather icon" class="fore5img" id="iconDay3">
@@ -118,7 +118,7 @@
                             </div>
                         </div>
 
-                        <div class="col-2 card bg-info">
+                        <div class="col-2 card bg-info m-auto mr-0">
                             <div class="card-body">
                                 <p id="fore5date4"></p>
                                 <img alt="weather icon" class="fore5img" id="iconDay4">
@@ -132,17 +132,14 @@
             </div> <!-- for currWeather -->
         </div> <!-- everything except header -->
 
-
-
-
     </div>
+
+
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
 
-    <!-- <script src="jquery-3.4.1.min.js"></script>
- -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
